Fixing Size of title vhp self check-in on iphonex Again

--- a/src/css/custom/_pages.scss
+++ b/src/css/custom/_pages.scss
@@ -27,7 +27,7 @@ body {
 }
 
 .mci-size {
-  font-size: 30px;
+  font-size: 28px;
 }
 
 .titlecolor {
@@ -40,6 +40,6 @@ body {
     font-size: 20px;
   }
   .mci-size {
-    font-size: 14px;
+    font-size: 30px;
   }
 }
